# editLiturgyPPTX

./: .gitignore  main.py  pyproject.toml
editpptx/: AsposeManager.py  PythonPPTXManager.py  TextBoxesFormatter.py  TextReplacer.py
fontconverter/: AbraamFont.py  Avva_ShenoudaFont.py  CS_New_AthanasiusFont.py  CopticFontFactory.py  CopticFontInterface.py  FontConverter.py  UnicodeText.py  convert_util.py
